# deep-research-agent

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/clients/: __init__.py
app/core/: config.py  storage.py
app/db/: database.py  models.py  repository.py
app/evaluation/: __init__.py  baseline.py  models.py  race.py  runner.py
app/llm/: client.py  mock_client.py
app/models/: __init__.py  document.py  evidence.py  paper.py  quick_research.py  search_intent.py  search_plan.py  task.py
app/providers/: arxiv.py  base.py  crossref.py  mock_provider.py  openalex.py  query_compiler.py  semantic_scholar.py
app/services/: citation_validation.py  claim_evidence.py  claim_verifier.py  dedup.py  evidence_validator.py  fts_search.py  pdf_downloader.py  pdf_lifecycle.py  pdf_parser.py  query_builder.py  quote_verification.py  ranking.py
app/services/evidence_engine/: __init__.py  abstract.py  base.py  factory.py  fts.py  hybrid.py  paperqa.py  retriever.py
app/static/: app.js  index.html  styles.css
app/workflow/: graph.py  quick_research.py
docs/: deploy.md  workflow.md
evals/: gold_annotations.json  questions.json
evals/baselines/: live_abstract_smoke_20260622.json  live_abstract_smoke_20260622_scores.json  phase2_mock_20260622.json  phase2_mock_20260622_scores.json
tests/: conftest.py  test_api_parameters.py  test_citations.py  test_dedup.py  test_evaluation.py  test_evidence_engine.py  test_evidence_pipeline.py  test_fts_retrieval.py  test_hybrid_retrieval.py  test_phase3.py  test_providers.py  test_query_compiler.py  test_quick_research.py  test_real_llm.py  test_real_providers.py  test_repository_serialization.py  test_retrieval_race.py  test_workflow.py
