[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Deep Research / Academic Literature Search Agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
]
fulltext = [
    "PyMuPDF>=1.24.0",
    "docling>=2.0.0",
    "typer==0.20.0",
    "click==8.1.8",
]
paperqa = [
    "paper-qa>=5",
    "typer==0.20.0",
    "click==8.1.8",
]

[project.scripts]
deep-research-baseline = "app.evaluation.baseline:main"
deep-research-eval = "app.evaluation.runner:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
